--- a/FreeSurfer/custom/README
+++ b/FreeSurfer/custom/README
@@ -1,7 +1,14 @@
-These are scripts that can be used to get better performance out of
-FreeSurfer version 6 on high resolution data (with or without a T2
-scan). Make sure the directory that these files are in,
-${HCPPIPEDIR}/FreeSurfer/custom, is on your PATH before running
-FreeSurferPipeline.sh. Run recon-all.v6.hires as you normally would
-WITHOUT -hires or -cm but adding -conf2hires.
+These are custom scripts necessary for ${HCPPIPEDIR}/FreeSurfer/FreeSurferPipeline.sh
 
+They modify the default v6.0 recon-all to:
+
+1) better handle high spatial resolution (< 1 mm voxels) structurals
+(by placing the surfaces onto the high resolution inputs), including
+pial surface refinement using the T2
+
+2) accomodate the HCP with some additional functionality
+
+Make sure the directory that these files are in,
+${HCPPIPEDIR}/FreeSurfer/custom, is on your PATH before running
+FreeSurferPipeline.sh. (If not, this directory will be prepended to your
+PATH by the FreeSurferPipeline.sh itself).
